--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nf run nodemon",
-    "build": "rm -rf dist && tsc"
+    "start:dist": "forever dist/index.js",
+    "build": "rm -rf dist && tsc && cp -r src/views dist/"
   },
   "author": "Lenny Urbanowski",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
     "foreman": "^3.0.1",
+    "forever": "^0.15.3",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
